fix: sort filter text align

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -70,6 +70,10 @@ hr {
   align-items: center;
 }
 
+.items-end {
+  align-items: end;
+}
+
 .items-start {
   align-items: start;
 }
